<resources>
    <string name="app_name">The Lazy Chef</string>
    <string name="subheading">Recipes, quicker.</string>
    <string name="get_started">Get Started</string>
    <string name="explore">Explore</string>
    <string name="trivia">Trivia</string>
    <string name="find_recipes">Find recipes</string>
    <string name="search_by_ingredients">Search by ingredients</string>
    <string name="wine_parings">Wine pairings</string>
    <string name="nutrition_qa">Nutrition Q&amp;A</string>
    <string name="random_recipe">Random Recipe</string>
    <string name="search_by_ingredients_subheading">Find the perfect recipe for the items in your kitchen!</string>
    <string name="add_ingredients">Enter ingredients</string>
    <string name="go">Go</string>
    <string name="example_ingredients">eg. tomato,pasta</string>
    <string name="wine_pairings_subheading">\"Drinking good wine with good food in good company is one of life\'s most civilized pleasures.\" -Michael Broadbent</string>
    <string name="enter_wine_type">Enter wine type</string>
    <string name="example_wines">eg.  Merlot</string>
    <string name="find_recipes_subheading">Browse the largest online database of recipes and cook up a storm!</string>
    <string name="enter_dish">Enter dish</string>
    <string name="example_dish">eg. black bean burrito</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="nutrition_qa_subheading">Worried about how many carbs are in your cheat meal? We\’ve got your back.</string>
    <string name="ask_me_anything">Ask me anything</string>
    <string name="example_question">eg. how much protein in chicken</string>
    <string name="loading">Loading…</string>
    <string name="test">Test</string>
    <string name="test_subheading">Testing testing!</string>
    <string name="results">Results</string>
    <string name="recipes">Recipes</string>
    <string name="pairings">Pairings</string>
    <string name="pairings_subheading">Cabernet Sauvignon is a dry red wine which is bold and full bodied. It goes especially well with stew, steak, chili, jjigae, and cholent.</string>
    <string name="find_recipes_results_subheading">Search results for bean burrito</string>
    <string name="http404">HTTP 404 :(</string>
    <string name="internet_error">Oops!\n It looks like you aren’t connected to the internet at the moment. Please stay connected for a hassle free experience.</string>
    <string name="hide_loader">Click me to hide loader</string>
    <string name="contact_us">Contact Us</string>
    <string name="github_text">We’re open source! Find us on GitHub and leave a star if you like our work :)</string>
    <string name="mail_text">Questions? Feel free to drop us a mail anytime.</string>
    <string name="twitter_text">Tweet about us!\n #thelazychef</string>
    <string name="advanced_search_subheading">Customize your search with these filters</string>
    <string name="cuisine">Cuisine</string>
    <string name="diet">Diet</string>
    <string name="exclude_ingredients">Exclude Ingredients</string>
    <string name="intolerances">Intolerances</string>
    <string name="dish">Dish</string>

</resources>
