<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ExploreActivity">

    <!-- Search by ingredients -->
    <TextView
        android:id="@+id/nutritionQAHeading"
        android:layout_width="330dp"
        android:layout_height="99dp"
        android:layout_marginBottom="187dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineHeight="44sp"
        android:text="@string/nutrition_qa"
        android:textAppearance="@style/heading"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

    <!-- Subheading -->
    <TextView
    android:id="@+id/nutritionQASubheading"
    android:layout_width="330dp"
    android:layout_height="71dp"
    android:layout_marginTop="21dp"
    android:gravity="center_horizontal|center_vertical"
    android:text="@string/nutrition_qa_subheading"
    android:textAppearance="@style/subHeading"
    android:translationZ="1dp"
    app:layout_constraintEnd_toEndOf="@+id/nutritionQAHeading"
    app:layout_constraintStart_toStartOf="@+id/nutritionQAHeading"
    app:layout_constraintTop_toBottomOf="@+id/nutritionQAHeading"
    tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/ellipse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_ellipse_2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ellipse3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_ellipse_3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ellipse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_ellipse_1"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/clipboardPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:background="@drawable/ic_clipboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutritionQAHeading"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/askMeAnything"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginTop="246dp"
        android:autofillHints="comma separated"
        android:background="@drawable/textbox"
        android:ems="10"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:hint="@string/ask_me_anything"
        android:inputType="textPersonName"
        android:textColor="@color/darkPurple"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/nutritionQAHeading"
        app:layout_constraintStart_toStartOf="@+id/nutritionQAHeading"
        app:layout_constraintTop_toBottomOf="@+id/nutritionQAHeading"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="108dp"
        android:layout_height="52dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/menu_button"
        android:fontFamily="@font/montserrat_semibold"
        android:onClick="onClickBtn"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/altGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/nutritionQAHeading"
        app:layout_constraintStart_toStartOf="@+id/nutritionQAHeading"
        app:layout_constraintTop_toBottomOf="@+id/nutritionQAHeading"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/exampleQuestion"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginTop="333dp"
        android:gravity="center"
        android:text="@string/example_question"
        android:textAppearance="@style/regularText"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/nutritionQAHeading"
        app:layout_constraintStart_toStartOf="@+id/nutritionQAHeading"
        app:layout_constraintTop_toBottomOf="@+id/nutritionQAHeading"
        tools:targetApi="jelly_bean" />

</androidx.constraintlayout.widget.ConstraintLayout>