<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <!-- Main Heading -->

    <!-- Subheading -->

    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="162dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_name"
        android:textAppearance="@style/heading"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="jelly_bean" />

    <!-- Undraw Hamburger-->

    <!-- Get Started Button -->

    <TextView
        android:id="@+id/subHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/subheading"
        android:textAppearance="@style/subHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading"
        tools:targetApi="jelly_bean" />

    <ImageView
        android:id="@+id/undrawHamburger"
        android:layout_width="220dp"
        android:layout_height="204dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_undraw_barbecue_android"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subHeading"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="205dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/main_button"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/get_started"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/altGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/undrawHamburger"
        tools:targetApi="jelly_bean" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>