<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ExploreActivity">

    <!-- Search by ingredients -->
    <TextView
        android:id="@+id/winePairingsHeading"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginBottom="215dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineHeight="44sp"
        android:text="@string/wine_parings"
        android:textAppearance="@style/heading"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

    <!-- Subheading -->
    <TextView
        android:id="@+id/winePairingsSubheading"
        android:layout_width="330dp"
        android:layout_height="97dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/wine_pairings_subheading"
        android:textAppearance="@style/subHeading"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="@+id/winePairingsHeading"
        app:layout_constraintStart_toStartOf="@+id/winePairingsHeading"
        app:layout_constraintTop_toBottomOf="@+id/winePairingsHeading"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/ellipse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_ellipse_2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ellipse3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_ellipse_3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ellipse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_ellipse_1"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/winePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:background="@drawable/ic_wine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winePairingsHeading"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/enterWines"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginTop="274dp"
        android:autofillHints="comma separated"
        android:background="@drawable/textbox"
        android:ems="10"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:hint="@string/enter_wine_type"
        android:inputType="textPersonName"
        android:textColor="@color/darkPurple"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/winePairingsHeading"
        app:layout_constraintStart_toStartOf="@+id/winePairingsHeading"
        app:layout_constraintTop_toBottomOf="@+id/winePairingsHeading"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="108dp"
        android:layout_height="62dp"
        android:layout_marginTop="411dp"
        android:background="@drawable/menu_button"
        android:fontFamily="@font/montserrat_semibold"
        android:onClick="onClickBtn"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/altGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/winePairingsHeading"
        app:layout_constraintStart_toStartOf="@+id/winePairingsHeading"
        app:layout_constraintTop_toBottomOf="@+id/winePairingsHeading"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/exampleWines"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_marginTop="341dp"
        android:gravity="center"
        android:text="@string/example_wines"
        android:textAppearance="@style/regularText"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/winePairingsHeading"
        app:layout_constraintStart_toStartOf="@+id/winePairingsHeading"
        app:layout_constraintTop_toBottomOf="@+id/winePairingsHeading"
        tools:targetApi="jelly_bean" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_back_arrow"
        tools:ignore="ContentDescription"
        android:onClick="onClickBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>