<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".SearchByIngredients">

    <TextView
        android:id="@+id/searchByIngredientsHeading"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="187dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineHeight="44sp"
        android:text="@string/search_by_ingredients"
        android:textAppearance="@style/heading"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/searchByIngredientsSubheading"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginTop="33dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/search_by_ingredients_subheading"
        android:textAppearance="@style/subHeading"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="@+id/searchByIngredientsHeading"
        app:layout_constraintStart_toStartOf="@+id/searchByIngredientsHeading"
        app:layout_constraintTop_toBottomOf="@+id/searchByIngredientsHeading"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/ellipse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_ellipse_2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ellipse3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_ellipse_3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ellipse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_ellipse_1"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/groceryPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:background="@drawable/ic_grocery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchByIngredientsHeading"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/enterIngredients"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginTop="246dp"
        android:autofillHints="comma separated"
        android:background="@drawable/textbox"
        android:ems="10"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:hint="@string/add_ingredients"
        android:inputType="textPersonName"
        android:textColor="@color/darkPurple"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/searchByIngredientsHeading"
        app:layout_constraintStart_toStartOf="@+id/searchByIngredientsHeading"
        app:layout_constraintTop_toBottomOf="@+id/searchByIngredientsHeading"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="108dp"
        android:layout_height="62dp"
        android:layout_marginTop="383dp"
        android:background="@drawable/menu_button"
        android:fontFamily="@font/montserrat_semibold"
        android:onClick="onClickBtn"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/altGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/searchByIngredientsHeading"
        app:layout_constraintStart_toStartOf="@+id/searchByIngredientsHeading"
        app:layout_constraintTop_toBottomOf="@+id/searchByIngredientsHeading"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/exampleIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="313dp"
        android:gravity="center"
        android:text="@string/example_ingredients"
        android:textAppearance="@style/regularText"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/searchByIngredientsHeading"
        app:layout_constraintStart_toStartOf="@+id/searchByIngredientsHeading"
        app:layout_constraintTop_toBottomOf="@+id/searchByIngredientsHeading"
        tools:targetApi="jelly_bean" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_back_arrow"
        tools:ignore="ContentDescription"
        android:onClick="backButtonClickHandler"/>

</androidx.constraintlayout.widget.ConstraintLayout>